# dart_shared_library

./: .dart_version  .gitignore  BUILD.gn  CMakeLists.txt  LICENSE  README.md  dart_sdk.patch  setup_env.ps1
.github/workflows/: build.yaml
examples/: CMakeLists.txt
examples/isolate_spawn/: CMakeLists.txt  hello_world.dart  main.cpp
examples/realtime_example/: CMakeLists.txt  drawable.cpp  drawable.h  exportfunc.cpp  exportfunc.h  main.cpp
examples/realtime_example/dart/: drawable.dart  ffi_calls.dart  main.dart  pubspec.yaml
examples/simple_example/: BUILD  BUILD.gn  CMakeLists.txt  hello_world.dart  main.cpp
examples/simple_example_ffi/: .gitignore  CMakeLists.txt  hello_world.dart  hello_world_ffi.dart  main.cpp  pubspec.yaml
scripts/: genie.lua
scripts/build_helpers/: analysis_options.yaml  pubspec.yaml
scripts/build_helpers/lib/: build_helpers.dart  depot_tools.dart
src/: BUILD  CMakeLists.txt  dart_dll.cpp  dart_dll.h  isolate_setup.cpp  isolate_setup.h
